# hkcert

./: .gitmodules  readme.md
babyenc/: PATCH_LOG.md  auth.pem  awd_lib.py  babyenc.csv  babyenc.xls  exploit_babyenc.py  exploit_babyenc_v2.py  exploit_babyenc_v3.py  exploit_babyenc_v4.py  pwn_template.py
babypython/: SUMMARY.md  VULNS.md  auth.pem  awd_lib.py  babypython.csv  babypython.xls  exploit.py  web.py
coshell/: awd_lib.py  coshell.csv  coshell.xls  exploit_coshell.py  patched_chal  pwn.py
discord-bot/: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  sqlx.toml
discord-bot/disclog/: MANIFEST.in  README.md  setup.py
discord-bot/disclog/disclog/: __init__.py  client.py  exceptions.py  logger.py
discord-bot/disclog/tests/: test_client.py
discord-bot/examples/: basic_usage.py  curl_examples.sh
discord-bot/migrations/: 001_initial.sql
discord-bot/src/: config.rs  main.rs
discord-bot/src/api/: extractors.rs  mod.rs
discord-bot/src/bot/: commands.rs  handlers.rs  mod.rs
discord-bot/src/db/: migrations.rs  mod.rs
discord-bot/src/models/: log_entry.rs  mod.rs  whitelist.rs
discord-bot/src/utils/: discord.rs  format.rs  mod.rs
example-chal/: CLAUDE.md  README.md  template.py  template_web.py
eznote/: PATCH_LOG.md  VULNERABILITIES.md  auth.pem  awd_lib.py  eznote.csv  eznote.xls  eznote_exploit.py  eznote_exploit_dirleak.py  eznote_exploit_filewrite.py  eznote_exploit_v2.py  eznote_exploit_v3.py  eznote_exploit_v4.py
ezvm/: auth.pem  recon.sh
lasp/: README.md
minioa/: auth.pem  awd_lib.py  minioa.csv  minioa.xls  pwn_lib.py  (+2 more)
(+252 files in other folders)
