[package]
name = "awd-logger"
version = "1.0.0"
edition = "2021"
authors = ["AWD Team"]
description = "A comprehensive logging system for AWD competitions with Discord integration"

[dependencies]
# Web framework
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Discord bot
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "collector",
] }
poise = { version = "0.6", features = ["collector"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

# Environment and configuration
dotenvy = "0.15"
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client (for the bot to self-call if needed)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"

# IP address handling
ipnet = "2.9"

[dev-dependencies]
tokio-test = "0.4"
